--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ flutter:
     - assets/images/Traps/Saw/
     - assets/images/HUD/
     - assets/images/Items/Fruits/
+    - assets/images/Items/Checkpoints/Checkpoint/
     - assets/images/Main Characters/
     - assets/images/Main Characters/Ninja Frog/
     - assets/images/Main Characters/Mask Dude/
